--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,7 +36,7 @@
         d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" />
     </symbol>
 
-    <symbol id="logo-cat" width="143" height="27" viewBox="0 0 143 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <symbol id="logo-cat" viewBox="0 0 143 27" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path
         d="M1.78783 24.4381C0.522508 22.6066 -0.105608 20.4106 2.82917e-05 18.1878V8.92382C-0.1532 6.67709 0.435585 4.44218 1.67609 2.56183C2.9052 1.11085 4.80474 0.441162 7.59818 0.441162C10.3916 0.441162 12.1794 1.11085 13.2968 2.3386C14.5099 3.89364 15.1066 5.84078 14.9728 7.80768V10.04H9.49771V7.47284C9.54193 6.71359 9.42778 5.95344 9.1625 5.24056C9.0207 4.95281 8.79596 4.71401 8.51719 4.55488C8.23841 4.39576 7.91835 4.32359 7.59818 4.34765C6.81601 4.34765 6.25733 4.57088 6.03385 5.12894C5.78108 5.92199 5.66766 6.75276 5.69864 7.58445V19.5271C5.63963 20.334 5.79375 21.1423 6.14559 21.871C6.36906 22.4291 6.92775 22.6523 7.70991 22.6523C8.49208 22.6523 8.93903 22.4291 9.1625 21.871C9.41655 21.1167 9.53016 20.3223 9.49771 19.5271V16.8484H14.9728V19.0807C15.0865 21.0797 14.4932 23.055 13.2968 24.6614C12.1794 26.0007 10.2799 26.6704 7.59818 26.6704C4.91648 26.5588 2.9052 25.8891 1.78783 24.4381Z"
         fill="#111111" />
@@ -75,12 +75,12 @@
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="51">
             <img class="main-header__logo-image" src="img/logo-mobile.svg" alt="Логотип" width="33" height="37">
           </picture>
-          <img class="main-header__logo-text" src="img/logo-text.webp" alt="Логотип название" width="101" height="18">
+          <img class="main-header__logo-text" src="img/logo-text.png" alt="Логотип название" width="101" height="18">
         </a>
       </div>
       <nav class="main-header__nav main-header__nav--opened main-header__nav--nojs">
         <button class="main-header__nav-toggle"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-header__nav-wrapper main-header__nav--nojs">
+        <div class="main-header__nav-wrapper main-header__nav-wrapper--nojs">
           <ul class="main-header__nav-list">
             <li class="main-header__nav-item">
               <a class="main-header__nav-link main-header__nav-link-catalog" href="index.html">
@@ -424,10 +424,10 @@
 
   </main>
 
-  <footer>
-    <div class="main-footer container">
+  <footer class="footer">
+    <div class="main-footer">
       <section class="contacts">
-        <div class="contacts__wrapper">
+        <div class="contacts__wrapper container">
           <h2 class="visually-hidden"> Контакты компании</h2>
           <div class="contacts__info">
             <p class="contacts__cooperation">приглашаем <br> к сотрудничеству дилеров!</p>
@@ -436,33 +436,33 @@
               <span>Санкт-Петербург</span>
             </p>
           </div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603628793782!2d30.318562737085166!3d59.93871911108934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca3de3a1%3A0xba80b1be36549aba!2sHtml%20Academy!5e0!3m2!1sru!2sru!4v1674887312135!5m2!1sru!2sru" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </section>
-      <div class="main-footer__item">
+      <iframe class="main-footer__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603628793782!2d30.318562737085166!3d59.93871911108934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca3de3a1%3A0xba80b1be36549aba!2sHtml%20Academy!5e0!3m2!1sru!2sru!4v1674887312135!5m2!1sru!2sru" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="main-footer__item container">
         <a class="main-footer__logo" href="#">
-          <svg class="main-footer__logo-image" width="143" height="27">
+          <svg class="main-footer__logo-image main-footer__logo-image-cat" aria-label="Логотип компании" width="143" height="27">
             <use href="#logo-cat"></use>
           </svg>
         </a>
         <ul class="main-footer__list">
           <li class="main-footer__items">
-            <a class="main-footer__social" href="#" aria="Ссылка на вконтакте">
-              <svg class="main-footer__logo-image" width="27" height="17">
+            <a class="main-footer__social" href="#">
+              <svg class="main-footer__logo-image" aria-label="Логотип Вконтакте" width="27" height="17">
                 <use href="#logo-image-vk"></use>
               </svg>
             </a>
           </li>
           <li class="main-footer__items">
-            <a class="main-footer__social" href="#" aria="Ссылка на ютуб">
-              <svg class="main-footer__logo-image" width="24" height="19">
+            <a class="main-footer__social" href="#">
+              <svg class="main-footer__logo-image" aria-label="Логотип ютуб" width="24" height="19">
                 <use href="#logo-image-youtube"></use>
               </svg>
             </a>
           </li>
           <li class="main-footer__items">
-            <a class="main-footer__social" href="#" aria="Ссылка на телеграм">
-              <svg class="main-footer__logo-image" width="20" height="18" viewBox="0 0 20 18">
+            <a class="main-footer__social" href="#">
+              <svg class="main-footer__logo-image" aria-label="Логотип телеграм" width="20" height="18" viewBox="0 0 20 18">
                 <use href="#logo-image-telegram"></use>
               </svg>
             </a>
