--- a/source/index.html
+++ b/source/index.html
@@ -130,14 +130,14 @@
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="51">
             <img class="main-header__logo-image" src="img/logo-mobile.svg" alt="Логотип" width="33" height="37">
           </picture>
-          <img class="main-header__logo-text" src="img/logo-text.webp" alt="Логотип название" width="101" height="18">
+          <img class="main-header__logo-text" src="img/logo-text.png" alt="Логотип название" width="101" height="18">
         </a>
       </div>
       <nav class="main-header__nav main-header__nav--opened main-header__nav--nojs">
         <button class="main-header__nav-toggle"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-header__nav-wrapper main-header__nav--nojs">
+        <div class="main-header__nav-wrapper main-header__nav-wrapper--nojs">
           <ul class="main-header__nav-list">
-            <li class="main-header__nav-item main-header__nav-index--active">
+            <li class="main-header__nav-item main-header__nav-item--active--index">
               <a class="main-header__nav-link" href="index.html">
                 Главная
               </a>
@@ -290,7 +290,7 @@
               </div>
               <div class="example__data">
                 <p class="example__quantity"> <span class="example__quantity-text">60 дней</span></p>
-                <p class="example__quantity-description">з атрачено времени</p>
+                <p class="example__quantity-description">затрачено времени</p>
               </div>
             </div>
             <p class="example__price">Затраты на питание: <span>15 000 РУБ. </span></p>
@@ -314,10 +314,10 @@
     </section>
   </main>
 
-  <footer>
-    <div class="main-footer container">
+  <footer class="footer">
+    <div class="main-footer">
       <section class="contacts">
-        <div class="contacts__wrapper">
+        <div class="contacts__wrapper container">
           <h2 class="visually-hidden"> Контакты компании</h2>
           <div class="contacts__info">
             <p class="contacts__cooperation">приглашаем <br> к сотрудничеству дилеров!</p>
@@ -326,33 +326,33 @@
               <span>Санкт-Петербург</span>
             </p>
           </div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603628793782!2d30.318562737085166!3d59.93871911108934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca3de3a1%3A0xba80b1be36549aba!2sHtml%20Academy!5e0!3m2!1sru!2sru!4v1674887312135!5m2!1sru!2sru" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </section>
-      <div class="main-footer__item">
+      <iframe class="main-footer__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603628793782!2d30.318562737085166!3d59.93871911108934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca3de3a1%3A0xba80b1be36549aba!2sHtml%20Academy!5e0!3m2!1sru!2sru!4v1674887312135!5m2!1sru!2sru" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="main-footer__item container">
         <a class="main-footer__logo" href="#">
-          <svg class="main-footer__logo-image" width="143" height="27">
+          <svg class="main-footer__logo-image main-footer__logo-image-cat" aria-label="Логотип компании" width="143" height="27">
             <use href="#logo-cat"></use>
           </svg>
         </a>
         <ul class="main-footer__list">
           <li class="main-footer__items">
-            <a class="main-footer__social" href="#" aria="Ссылка на вконтакте">
-              <svg class="main-footer__logo-image" width="27" height="17">
+            <a class="main-footer__social" href="#">
+              <svg class="main-footer__logo-image" aria-label="Логотип Вконтакте" width="27" height="17">
                 <use href="#logo-image-vk"></use>
               </svg>
             </a>
           </li>
           <li class="main-footer__items">
-            <a class="main-footer__social" href="#" aria="Ссылка на ютуб">
-              <svg class="main-footer__logo-image" width="24" height="19">
+            <a class="main-footer__social" href="#">
+              <svg class="main-footer__logo-image" aria-label="Логотип ютуб" width="24" height="19">
                 <use href="#logo-image-youtube"></use>
               </svg>
             </a>
           </li>
           <li class="main-footer__items">
-            <a class="main-footer__social" href="#" aria="Ссылка на телеграм">
-              <svg class="main-footer__logo-image" width="20" height="18" viewBox="0 0 20 18">
+            <a class="main-footer__social" href="#">
+              <svg class="main-footer__logo-image" aria-label="Логотип телеграм" width="20" height="18" viewBox="0 0 20 18">
                 <use href="#logo-image-telegram"></use>
               </svg>
             </a>
